--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <table cellspacing="20">
-        <td><img src="images/RobertP.png" alt="profile picture"></td>
+        <td><img src="RobertP.png" alt="profile picture"></td>
         <td><h1>Robert Williams</h1>
             <p><em>Learning to code <strong>on my own</strong></em></p>   
             <p>My name is Robert Williams. I am a retired military member and stay at home father that has decided to learn how to code.</p></td>
