--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Robert's Site</title>
 </head>
-<body>
+<body style="background-color:aqua">
     <table cellspacing="20">
         <td><img src="images/robertp.png" alt="profile picture"></td>
         <td><h1>Robert Williams</h1>
